--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://srivastavavaibhav499:TQuyhvi25_UbZYP@cluster0.yvv9y.mongodb.net/pb-tour
+MONGO_URL=mongodb+srv://srivastavavaibhav499:@cluster0.yvv9y.mongodb.net/pb-tour
 PORT=3000
